# TFM-Agents

./: .gitignore  README.md  langgraph.json  main.py  pyproject.toml
docs/: data_contracts.md
models/aspects/: aspect_classifier_lr.joblib  aspect_classifier_svm.joblib  aspect_mlb.joblib  aspect_taxonomy.json  aspect_tfidf.joblib  sentiment_lexicon.json
models/prediction/: correlation_results.json  model_metadata.json  sales_predictor.joblib  sales_scaler.joblib
models/sentiment/: es_logistic_sentiment.joblib  es_svm_sentiment.joblib  model_comparison_results.csv  olist_logistic_sentiment.joblib  olist_svm_sentiment.joblib  unified_logistic_sentiment.joblib  unified_svm_sentiment.joblib  yelp_logistic_sentiment.joblib  yelp_svm_sentiment.joblib
notebooks/: 01_eda_yelp.ipynb  01_eda_yelp_sample_2.ipynb  02_eda_es.ipynb  03_eda_olist.ipynb  05_nlp_sentiment_models.ipynb  06_nlp_aspect_extraction.ipynb  07_sales_prediction.ipynb
scripts/: build_gold.py  build_silver.py  data_status.py  test_nlp_tools.py
src/: __init__.py
src/tfm/: __init__.py  cli.py
src/tfm/agents/: __init__.py  insight_synthesizer.py  nlp_worker.py  qa_evaluator.py  router.py
src/tfm/config/: __init__.py  settings.py
src/tfm/graphs/: __init__.py  conversation_graph.py  evaluation_graph.py  nlp_graph.py  prediction_graph.py
src/tfm/schemas/: __init__.py  outputs.py  request.py  state.py
tests/: __init__.py  conftest.py  test_aggregations.py  test_features.py  test_graph_integration.py  test_loaders.py  test_nlp_utils.py  test_preprocess.py  test_router.py  test_sentiment.py
(+12 files in other folders)
